force-app/main/default/objects/Journey_Segment__c/Journey_Segment__c.object-meta.xml
<CustomObject>
    <label>Journey_Segment</label>
    <nameField>
        <label>Journey_Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey_Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>