force-app/main/default/objects/Journey_Segment__c/fields/From_Station__c.field-meta.xml
<CustomField>
    <fullName>From_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From_Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Journey_Segments</relationshipLabel>
    <relationshipName>Journey_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>