force-app/main/default/objects/Journey_Segment__c/fields/From_Station_Order__c.field-meta.xml
<CustomField>
    <fullName>From_Station_Order__c</fullName>
    <label>From_Station_Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>