force-app/main/default/objects/Journey_Segment__c/fields/Popular_Segment__c.field-meta.xml
<CustomField>
    <fullName>Popular_Segment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Popular_Segment</label>
    <type>Checkbox</type>
</CustomField>