force-app/main/default/objects/Journey_Segment__c/fields/Segment_Order__c.field-meta.xml
<CustomField>
    <fullName>Segment_Order__c</fullName>
    <displayFormat>SEG-{00000}</displayFormat>
    <label>Segment_Order</label>
    <type>AutoNumber</type>
</CustomField>