force-app/main/default/objects/Journey_Segment__c/fields/To_Station__c.field-meta.xml
<CustomField>
    <fullName>To_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To_Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Journey_Segments (To_Station)</relationshipLabel>
    <relationshipName>Journey_Segments1</relationshipName>
    <type>Lookup</type>
</CustomField>