force-app/main/default/objects/Journey_Segment__c/fields/Train__c.field-meta.xml
<CustomField>
    <fullName>Train__c</fullName>
    <label>Train</label>
    <referenceTo>Train__c</referenceTo>
    <relationshipLabel>Journey_Segments</relationshipLabel>
    <relationshipName>Journey_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>